# auto_pikpak_bangumi

./: .gitignore  Cargo.toml  config.yml
src/: bangumi.rs  config.rs  directory.rs  main.rs  pikpak.rs
