[package]
name = "auto_pikpak_bangumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0.80"
rss = "2.0"
regex = "1"

pikpakcli = { git = "https://github.com/ununian/pikpakcli_rust.git", branch = "master" }
